--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -3,7 +3,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/Backend/server.js" 
+      "destination": "/server.js"
     }
   ]
 }
